<resources>
    <string name="app_name">挑食网</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="get_coupon">领取优惠券</string>
    <string name="my_card_package">我的卡包</string>
    <string name="my_card_use">我的卡卷</string>
    <string name="club_card">会员卡</string>
    <string name="discount_coupon">优惠券</string>
    <string name="no_club_card">(会员卡暂未开通)</string>
    <string name="my_coupon">我的票卷</string>
    <string name="screening">筛选</string>
    <string name="confirm_order">确认订单</string>
    <string name="coupon_hint">您还没有可用优惠券！</string>
    <string name="coupon_use_edt_hint">请输入您的卡券码！</string>
    <string name="coupon_submit">提交</string>
    <string name="coupon_coupon_no">卡券码</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="app_tip">提示</string>

</resources>
