<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg_hui"
    android:layout_height="match_parent">
    <TextView
       style="@style/BarStyle" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white">
        <ImageView
            android:id="@+id/add_address_ivBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/backlan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_color"
            android:textSize="18sp"
            android:text="@string/my_card_package"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tv_get_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/get_coupon"
            android:textSize="15sp"
            android:textColor="@color/theme_color"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
       style="@style/lineStyle" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="7dp"
        android:text="@string/club_card"
        android:textSize="14dp"
        android:textColor="#8e8e8f"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@mipmap/card_package_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/vip_icon"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#212121"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:text="@string/no_club_card"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_go_right"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="7dp"
        android:text="@string/discount_coupon"
        android:textSize="14dp"
        android:textColor="#8e8e8f"/>
    <LinearLayout
        android:id="@+id/ll_my_conpon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@mipmap/card_package_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/my_coupon_icon"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:text="@string/my_coupon"/>
        <TextView
            android:id="@+id/tv_overdueNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="#aeaeae"
            android:text="（0张即将过期）"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_go_right"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>

</LinearLayout>