<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="vertical">
        <TextView
           style="@style/BarStyle"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/add_address_ivBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/backlan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_color"
            android:textSize="18sp"
            android:text="@string/confirm_order"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/theme_color"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:text="@string/screening"/>
    </RelativeLayout>
    <TextView
        style="@style/lineStyle" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#1d1d1d"
            android:layout_centerVertical="true"
            android:text="使用外部卡卷"/>
       <ImageButton
           android:id="@+id/ib_use"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:background="@mipmap/use_icon"/>
    </RelativeLayout>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="0.2dp"
       android:background="@color/line"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/my_card_use"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textColor="#1d1d1d"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:background="@color/bg_hui"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/guanzhu_list_rlNoItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:visibility="gone">
            <ImageView
                android:id="@+id/guanzhu_list_ivNoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/noyouhui"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/guanzhu_list_ivNoItem"
                android:layout_marginTop="20dp"
                android:text="@string/coupon_hint"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


        <com.brandsh.tiaoshi.widget.SelfPullToRefreshListView
            android:id="@+id/discount_list_ptrListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#00000000"
            android:cacheColorHint="@android:color/transparent"/>
    </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_frist_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@mipmap/coupon_hint"/>

</FrameLayout>